--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,5 +6,5 @@ runs:
   steps:
     - name: echo hello world
       run: |
-        source ${{ github.action_path }}/echo.sh
+        source ${GITHUB_ACTION_PATH}/echo.sh
       shell: bash
