--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,14 @@
 name: "mydemo"
-description: ""
 
-runs:
-  using: "composite"
-  steps:
-    - name: echo hello world
-      run: |
-        source ${GITHUB_ACTION_PATH}/echo.sh
-      shell: bash
+
+on:
+  push:
+    branches: [ "main" ]
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: echo hello world
+        run: |
+          source ${GITHUB_ACTION_PATH}/echo.sh
+        shell: bash
