--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,5 +18,6 @@ jobs:
           echo "GITHUB_REF = $GITHUB_REF"
           echo "GITHUB_ACTION_PATH = $GITHUB_ACTION_PATH"
           echo "github.action_path = ${{ github.action_path }}"
+          echo "github.path = ${{ github.path }}"
           source ${GITHUB_WORKSPACE}/echo.sh
         shell: bash
