--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,8 @@ jobs:
   test_job:
     runs-on: ubuntu-latest
     steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
       - name: echo hello world
         run: |
           echo "GITHUB_WORKSPACE = $GITHUB_WORKSPACE"
@@ -19,5 +21,5 @@ jobs:
           echo "GITHUB_ACTION_PATH = $GITHUB_ACTION_PATH"
           echo "github.action_path = ${{ github.action_path }}"
           echo "github.path = ${{ github.path }}"
-          source ${GITHUB_REPOSITORY}/echo.sh
+          source echo.sh
         shell: bash
